--- a/platformio.ini
+++ b/platformio.ini
@@ -69,7 +69,7 @@ src_filter =
 
 [esp32_base]
 extends = env
-platform = espressif32
+platform = espressif32@3.5.0
 
 src_filter = 
   ${env.src_filter} -<nrf52/> -<asr650x/> -<rp2040/> -<portduino/>
