Moved stripped down meshtastic "mesh" core over and started unit tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,9 +20,10 @@ build_flags =
   -Wno-format 
   -Isrc -Wl,-Map,.pio/build/output.map 
   -DUSE_THREAD_NAMES
-# -DRADIOLIB_GODMODE
+  -DRADIOLIB_GODMODE
 
 lib_deps =
+  https://github.com/meshtastic/ArduinoThread.git#72921ac222eed6f526ba1682023cee290d9aa1b3
   nanopb/Nanopb@^0.4.3
   jgromes/RadioLib@^5.1.2
 
