--- a/platformio.ini
+++ b/platformio.ini
@@ -18,12 +18,11 @@ build_flags =
   -std=c++11
   -Wno-missing-field-initializers
   -Wno-format 
-  -Isrc -Wl,-Map,.pio/build/output.map 
+  -Isrc -Isrc/mesh -Wl,-Map,.pio/build/output.map 
   -DUSE_THREAD_NAMES
   -DRADIOLIB_GODMODE
 
 lib_deps =
-  https://github.com/meshtastic/ArduinoThread.git#72921ac222eed6f526ba1682023cee290d9aa1b3
   nanopb/Nanopb@^0.4.3
   jgromes/RadioLib@^5.1.2
 
