--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,19 @@
         "vector": "cpp",
         "string_view": "cpp",
         "queue": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "exception": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "optional": "cpp",
+        "initializer_list": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "stdexcept": "cpp",
+        "system_error": "cpp",
+        "type_traits": "cpp"
     }
 }
