Progress on testing

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@ extra_configs = variants/*/platformio.ini
 framework = arduino
 monitor_speed = 921600
 upload_speed = 921600
+test_speed = 921600
 
 lib_ldf_mode = deep+
 extra_scripts = bin/platformio-custom.py
@@ -21,6 +22,7 @@ build_flags =
   -Isrc -Isrc/mesh -Wl,-Map,.pio/build/output.map 
   -DUSE_THREAD_NAMES
   -DRADIOLIB_GODMODE
+  -DPB_ENABLE_MALLOC=1
 
 lib_deps =
   nanopb/Nanopb@^0.4.3
