--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,9 @@
         "ostream": "cpp",
         "stdexcept": "cpp",
         "system_error": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "numeric": "cpp",
+        "cstddef": "cpp",
+        "limits": "cpp"
     }
 }
