First murmurs of CubeFS

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ build_flags =
   -std=c++11
   -Wno-missing-field-initializers
   -Wno-format 
-  -Isrc -Isrc/mesh -Wl,-Map,.pio/build/output.map 
+  -Isrc -Wl,-Map,.pio/build/output.map 
   -DUSE_THREAD_NAMES
   -DRADIOLIB_GODMODE
   -DPB_ENABLE_MALLOC=1
@@ -31,10 +31,14 @@ lib_deps =
 [asr650x_base]
 extends = env
 platform = asrmicro650x
+lib_deps =
+  ${env.lib_deps}
+  charlesbaynham/OSFS@^1.2.3 # EEPROM Filesystem
 
 build_flags = 
   ${env.build_flags} -Wno-unused-variable 
   -Isrc/asr650x
+  -Dtypeof=__typeof__
 
 src_filter = 
   ${env.src_filter} -<esp32/> -<nrf52/> -<rp2040/> -<portduino/>
