--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "proto"]
-	path = proto
+[submodule "protobufs"]
+	path = protobufs
 	url = https://github.com/meshtastic/Meshtastic-protobufs.git
