Small stuff, and work with current ESP32 IDF, including internal LittleFS

--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,7 @@ src_filter =
 
 [esp32_base]
 extends = env
-platform = espressif32@3.5.0
+platform = espressif32
 
 src_filter = 
   ${env.src_filter} -<nrf52/> -<asr650x/> -<rp2040/> -<portduino/>
@@ -88,4 +88,3 @@ build_flags =
 
 lib_deps =
   ${env.lib_deps}
-  lorol/LittleFS_esp32@^1.0.6
