--- a/variants/cubecell/platformio.ini
+++ b/variants/cubecell/platformio.ini
@@ -21,9 +21,11 @@ extends = asr650x_base
 board = cubecell_board_plus
 build_flags = ${asr650x_base.build_flags}
   -Ivariants/cubecell
+  -DSCREEN_VER=SH1107Wire
 
 [env:cubecell_gps]
 extends = asr650x_base
 board = cubecell_gps
 build_flags = ${asr650x_base.build_flags}
   -Ivariants/cubecell
+  -DSCREEN_VER=SSD1306Wire
