--- a/platformio.ini
+++ b/platformio.ini
@@ -40,6 +40,7 @@ build_flags =
   ${env.build_flags} -Wno-unused-variable 
   -Isrc/asr650x
   -Dtypeof=__typeof__
+  -DNO_ESP32
 
 src_filter = 
   ${env.src_filter} -<esp32/> -<nrf52/> -<rp2040/> -<portduino/>
@@ -58,6 +59,7 @@ build_flags =
   -Isrc/rp2040
   -D__PLAT_RP2040__
   -D _POSIX_THREADS
+  -DNO_ESP32
 
 src_filter = 
   ${env.src_filter} -<esp32/> -<nrf52/> -<asr650x/> -<portduino/>
@@ -70,6 +72,7 @@ board_build.partitions = partition-table.csv
 build_flags = 
   ${env.build_flags} -Wno-unused-variable 
   -Isrc/nrf52 
+  -DNO_ESP32
 
 src_filter = 
   ${env.src_filter} -<esp32/> -<asr650x/> -<rp2040/> -<portduino/>
