--- a/variants/portduino/platformio.ini
+++ b/variants/portduino/platformio.ini
@@ -2,7 +2,7 @@
 [env:native]
 extends=env
 platform = https://github.com/geeksville/platform-native.git 
-src_filter = 
-  ${env.src_filter} -<esp32/> -<nrf52/> -<asr650x/> -<rp2040/> +<../variants/portduino>
+build_src_filter = 
+  -<esp32/> -<nrf52/> -<asr650x/> -<rp2040/> +<../variants/portduino>
 build_flags = ${arduino_base.build_flags} -O0 -I variants/portduino
 board = cross_platform
