--- a/variants/rak4631/platformio.ini
+++ b/variants/rak4631/platformio.ini
@@ -2,5 +2,5 @@
 extends = nrf52_base
 board = wiscore_rak4631
 build_flags = ${nrf52_base.build_flags} -Ivariants/rak4631 -D RAK_4631
-src_filter = ${nrf52_base.src_filter} +<../variants/rak4631>
+build_src_filter = ${nrf52_base.build_src_filter} +<../variants/rak4631>
 debug_tool = jlink
