--- a/platformio.ini
+++ b/platformio.ini
@@ -42,8 +42,8 @@ build_flags =
   -Dtypeof=__typeof__
   -DNO_ESP32
 
-src_filter = 
-  ${env.src_filter} -<esp32/> -<nrf52/> -<rp2040/> -<portduino/>
+build_src_filter = 
+  -<esp32/> -<nrf52/> -<rp2040/> -<portduino/>
 
 [rp2040_base]
 extends = env
@@ -61,8 +61,8 @@ build_flags =
   -D _POSIX_THREADS
   -DNO_ESP32
 
-src_filter = 
-  ${env.src_filter} -<esp32/> -<nrf52/> -<asr650x/> -<portduino/>
+build_src_filter = 
+  -<esp32/> -<nrf52/> -<asr650x/> -<portduino/>
 
 [nrf52_base]
 extends = env
@@ -74,15 +74,15 @@ build_flags =
   -Isrc/nrf52 
   -DNO_ESP32
 
-src_filter = 
-  ${env.src_filter} -<esp32/> -<asr650x/> -<rp2040/> -<portduino/>
+build_src_filter = 
+  -<esp32/> -<asr650x/> -<rp2040/> -<portduino/>
 
 [esp32_base]
 extends = env
 platform = espressif32
 
-src_filter = 
-  ${env.src_filter} -<nrf52/> -<asr650x/> -<rp2040/> -<portduino/>
+build_src_filter = 
+  -<nrf52/> -<asr650x/> -<rp2040/> -<portduino/>
 
 build_flags =
   ${env.build_flags} -Wno-unused-variable 
