Fix build_src_filter paths
Solves

```
Error: Nothing to build. Please put your source code files to the 'Meshtastic-repeater/src' folder
```

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,7 @@ build_flags =
   -DNO_ESP32
 
 build_src_filter = 
-  -<esp32/> -<nrf52/> -<rp2040/> -<portduino/>
+  +<*> -<esp32/> -<nrf52/> -<rp2040/> -<portduino/>
 
 [rp2040_base]
 extends = env
@@ -62,7 +62,7 @@ build_flags =
   -DNO_ESP32
 
 build_src_filter = 
-  -<esp32/> -<nrf52/> -<asr650x/> -<portduino/>
+ +<*>  -<esp32/> -<nrf52/> -<asr650x/> -<portduino/>
 
 [nrf52_base]
 extends = env
@@ -75,14 +75,14 @@ build_flags =
   -DNO_ESP32
 
 build_src_filter = 
-  -<esp32/> -<asr650x/> -<rp2040/> -<portduino/>
+  +<*> -<esp32/> -<asr650x/> -<rp2040/> -<portduino/>
 
 [esp32_base]
 extends = env
 platform = espressif32
 
 build_src_filter = 
-  -<nrf52/> -<asr650x/> -<rp2040/> -<portduino/>
+  +<*> -<nrf52/> -<asr650x/> -<rp2040/> -<portduino/>
 
 build_flags =
   ${env.build_flags} -Wno-unused-variable 
